# OK8MP-linux

./: build.sh  environment-setup-aarch64-poky-linux
OK8MP-FreeRTOS/: BuildRelease.sh
OK8MP-linux-fs/rootfs/boot/: Image
OK8MP-linux-fs/rootfs/etc/: busybox.links.nosuid  group  gshadow  hostapd-2.4g.conf  hostapd-5g.conf  hostname  hosts  issue  issue.net  ld.so.cache  nsswitch.conf  passwd  rc.local  resolv-conf.connman  shadow  shells  timestamp  udhcpd.conf  version  vsftpd.conf  vsftpd.ftpusers  vsftpd.user_list
OK8MP-linux-fs/rootfs/lib/: cpp  libacl.so.1.1.0  libattr.so.1.1.0  libblkid.so.1.1.0  libcap-ng.so.0.0.0  libcap.so.2.27  libcom_err.so.2.1  libcrack.so.2.9.0  libe2p.so.2.3  libext2fs.so.2.4  libfdisk.so.1.1.0  libgcc_s.so.1  libmount.so.1.1.0  libncurses.so.5.9  libncursesw.so.5.9  libnss_mdns.so.2  libnss_mdns4.so.2  libnss_mdns4_minimal.so.2  libnss_mdns6.so.2  libnss_mdns6_minimal.so.2  libnss_mdns_minimal.so.2  libnss_myhostname.so.2  libpam.so.0.84.2  libpam_misc.so.0.82.1  libpamc.so.0.82.1  libsmartcols.so.1.1.0  (+10 more)
OK8MP-linux-fs/rootfs/usr/share/ml-security/examples/: CMakeLists.txt  README  ax_sample  ax_sample.cpp  cloning_sample  cloning_sample.cpp  get_model.sh
OK8MP-linux-fs/rootfs/usr/share/ml-security/examples/test_images/: source.txt
appsrc/forlinx-cmd/: Makefile
appsrc/forlinx-qt/: qt.pro
images/: config.ini
tools/: build_close_source.sh  fakeroot.fs  mkramdisk.sh  mksdcard8mp.sh
tools/imx-boot/: Makefile  mkimage_imx8
tools/ramdisk/: fb_clear  fsl-sdcard-partition.sh  imx-sdcard-partition.sh  init.sh  update.sh
(+13717 files in other folders)
